@@ -48,6 +48,10 @@ Changelog
   this will detect "clearly intended" END cards and produce a warning about
   their invalidity and fix them. (Backported from 3.2.1)
 
+- Fixed a display formatting issue with fitsdiff where sometimes it did not
+  show the difference between two floating point numbers if they were the same
+  up to some low number of digits. (Backported from 3.2.1)
+
 
 3.0.13 (unreleased)
 -------------------
